2004-04-05  Pawel Salek

	* NEWS, configure.in: release balsa-2.1.2

2004-04-04  Pawel Salek

	* libbalsa/mailbox_local.c: make sure to kill the delayed sync handler
	before closing the mailbox. Lock properly, too.
	* libbalsa/mailbox_pop3.c: cleanup and improve progress indication.
	* libbalsa/imap/pop3.[ch]: armour the code against broken connections.
	* src/main-window.c: change slightly displaying format.

2004-04-03  Pawel Salek

	* libbalsa/imap/pop3.h: implement pipelined pop3 fetching.
	* libbalsa/mailbox_pop3.c: use it.

2004-04-02 06:45  PeterB

	* libbalsa/mailbox_mbox.c: when rewriting the mbox in a sync, use
	g_mime_stream_write_to_stream instead of
	g_mime_message_write_to_stream.

2004-04-01 11:50  PeterB

	* src/: balsa-index.c, balsa-index.h: desensitize menu items that
	change flags in a readonly mailbox.
	* libbalsa/message.c: warn if we try to change flags in a readonly
	mailbox.
	* libbalsa/mailbox.c: set theading only in an open mailbox; don't
	try to change flags in a readonly mailbox.

2004-04-01  Pawel Salek

	* libbalsa/imap/*.c: compile without SSL and with gmime-2.1.3.

2004-03-31  Carlos Morgado  <chbm gnome.org>

	* src/balsa-message.c: quote argument when we invoke a vfs command

2004-03-31 09:24  PeterB

	* src/main-window.c: handle mailbox-changed signal in an idle
	handler.
	* libbalsa/imap/imap-handle.c: declaration out of order.

2004-03-30 15:39  PeterB

	* libbalsa/: mailbox_local.c, mailbox_maildir.c, mailbox_mbox.c,
	mailbox_mh.c: use libbalsa_mailbox_run_filters_on_reception in
	libbalsa_mailbox_local_load_messages instead of the individual
	drivers.
	* libbalsa/mailbox_imap.c: implement
	LibBalsaMailboxImap::search_stamp; new api for
	libbalsa_mailbox_run_filters_on_reception; remove dead code.
	* libbalsa/: mailbox.c, mailbox.h: scrap
	libbalsa_mailbox_invalidate_iters, and invalidate them only when
	really necessary; clean up
	libbalsa_mailbox_run_filters_on_reception; use separate keys for
	added and promoted.
